# ai-engineer-core-track-labs

./: README.md  main.py  pyproject.toml  requirements.txt
week1/: day1_homework.ipynb  day2_homework.ipynb  day5_challenge.ipynb  week1_excercise.ipynb
week2/: day1_homework.ipynb  day2_homework.ipynb  day3_homework.ipynb  week2_excercise.ipynb
week4/: week4_excercise.ipynb
week5/: .gitignore  week5_exercise.ipynb
week8/: week8_exercise.ipynb
