[project]
name = "ai-engineer-core-track-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "chromadb>=1.5.8",
    "datasets>=4.8.4",
    "dotenv>=0.9.9",
    "gradio>=6.13.0",
    "litellm>=1.83.0",
    "openai>=2.32.0",
    "peft>=0.19.1",
    "pydantic>=2.13.3",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.6.0",
    "trl>=1.2.0",
]
